<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    >

	<ImageView
	    android:id="@+id/avatar_iv"
	    android:layout_width="124dp"
	    android:layout_height="164dp"
	    android:contentDescription="@string/app_name"
	    android:src="@drawable/i001" />

    <RelativeLayout
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        >
        <TextView 
            android:id="@+id/title_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textColor="#24a9c7"     
            android:textSize="20sp"  
            android:textStyle="bold|italic" 
            />
        <TextView 
            android:id="@+id/authorlb_tv"
            android:layout_below="@id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorlb"
            android:textSize="15sp"
            />        
        <TextView 
            android:layout_marginLeft="5dp"
            android:id="@+id/author_tv"
            android:layout_below="@id/title_tv"
            android:layout_toRightOf="@id/authorlb_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"        
            android:textColor="#888"       
            android:textStyle="italic"     
            android:textSize="15sp"
            />
        <LinearLayout 
            android:layout_below="@id/author_tv"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
            	android:text="@string/_75000_vnd"
                />
            <TextView 
                android:id="@+id/buy_bt"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
            	android:background="@drawable/add_to_shopping_cart"
            	android:contentDescription="@string/app_name"
                />
        </LinearLayout>
    </RelativeLayout>

    

</LinearLayout>